labs/network-policies-2.yml/apps.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: team-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: nginx:1.27-alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: team-a
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: client-a
  namespace: team-a
  labels:
    app: client
spec:
  containers:
  - name: client
    image: curlimages/curl:8.6.0
    command: ["sh","-c","sleep 360000"]
---
apiVersion: v1
kind: Pod
metadata:
  name: client-b
  namespace: team-b
  labels:
    app: client
spec:
  containers:
  - name: client
    image: curlimages/curl:8.6.0
    command: ["sh","-c","sleep 360000"]
